# esp32-hal

./: Cargo.toml  flash  memory.x
.cargo/: config
examples/: adc.rs  adc_serial.rs  dac.rs  efuse.rs  hall.rs
src/: adc.rs  efuse.rs  gpio.rs  lib.rs  prelude.rs
src/analog/: adc.rs  config.rs  dac.rs  hall.rs  mod.rs
