[package]
name = "esp32-hal"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32 = { version = "0.2.2" }
nb = { version = "0.1.2" }

[profile.dev]
incremental = false
debug = true
codegen-units = 1

[profile.release]
lto = true
incremental = false
debug = true
codegen-units = 1

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[[example]]
name = "adc"
